--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,27 @@ jobs:
     - name: Build Solution
       run: msbuild SitefinityWebApp.csproj /p:Configuration=Release /p:Platform=AnyCPU
 
+    - name: Check DLL Contents
+      run: |
+        Write-Host "=== DLL File Size ==="
+        Get-Item bin/SitefinityWebApp.dll | Select-Object Name, Length
+
+        Write-Host "`n=== All Types in DLL ==="
+        $assembly = [System.Reflection.Assembly]::LoadFrom("$pwd\bin\SitefinityWebApp.dll")
+        $types = $assembly.GetTypes()
+        Write-Host "Total types: $($types.Count)"
+        $types | ForEach-Object { Write-Host $_.FullName }
+
+        Write-Host "`n=== Looking for MarkdownFieldControl ==="
+        $markdownTypes = $types | Where-Object { $_.Name -like "*Markdown*" }
+        if ($markdownTypes) {
+          Write-Host "FOUND:"
+          $markdownTypes | ForEach-Object { Write-Host $_.FullName }
+        } else {
+          Write-Host "NOT FOUND - MarkdownFieldControl is NOT in the DLL!"
+        }
+      shell: pwsh
+
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
