--- a/AdminAppExtensions/markdown-field/package.json
+++ b/AdminAppExtensions/markdown-field/package.json
@@ -3,29 +3,20 @@
   "version": "1.0.0",
   "description": "Custom Markdown field for Sitefinity AdminApp using Toast UI Editor",
   "scripts": {
-    "build": "ng build --configuration production",
-    "build:dev": "ng build --configuration development",
-    "watch": "ng build --watch --configuration development"
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "watch": "webpack --watch --mode development"
   },
   "dependencies": {
-    "@angular/animations": "~14.2.0",
-    "@angular/common": "~14.2.0",
-    "@angular/compiler": "~14.2.0",
-    "@angular/core": "~14.2.0",
-    "@angular/forms": "~14.2.0",
-    "@angular/platform-browser": "~14.2.0",
-    "@angular/platform-browser-dynamic": "~14.2.0",
-    "@progress/sitefinity-adminapp-sdk": "14.4.8200",
-    "@toast-ui/editor": "^3.2.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@toast-ui/editor": "^3.2.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.0",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
     "@types/node": "^18.0.0",
-    "typescript": "~4.7.2"
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
